# merchant-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  internal.rs  lib.rs  traits.rs  types.rs
crates/core/src/internal/: expose_chars.rs  expose_sensitive.rs  exposed.rs  highly_secret.rs  masked.rs  personal_data.rs  safe_wrapper.rs  sanitized.rs  secret_string.rs  validated.rs
crates/core/src/traits/: authorizable.rs  cancellable.rs  capturable.rs  gateway.rs  protected.rs  refundable.rs  tokenization.rs
crates/core/src/types/: account_number.rs  account_type.rs  address.rs  authorization_code.rs  authorization_id.rs  bank_account_details.rs  bank_code.rs  bank_name.rs  birth_date.rs  card_details.rs  card_expiry.rs  card_holder_name.rs  city.rs  country_code.rs  customer_category.rs  customer_id.rs  cvv.rs  email_address.rs  full_name.rs  iban.rs  insecure.rs  merchant_reference_id.rs  metadata.rs  money.rs  national_id.rs  payment_source.rs  payment_token.rs  phone_number.rs  postal_code.rs  primary_account_number.rs  reason_for_refund.rs  refund_id.rs  region_code.rs  routing_number.rs  secret_string.rs  secure.rs  street_address.rs  token.rs  transaction_id.rs  transaction_status.rs  (+2 more)
crates/core/src/types/insecure/: address.rs  birth_date.rs
crates/core/src/types/payment_source/: bank_account.rs  tokenized_payment.md
crates/core/src/types/secure/: address.rs  card_holder_name.rs  customer_id.rs  email_address.rs  iban.rs  merchant_reference_id.rs  national_id.rs  payment_source.rs  phone_number.rs  postal_code.rs  primary_account_number.rs  region_code.rs  street_address.rs  virtual_payment_address.rs  wallet_address.rs
crates/core/src/types/secure/payment_source/: bank_account.md
doc/adr/: 0000-template.md  0001-bank-routing-numbers.md  0001-core-architecture.md  0001.md  0002-authorize-vs-purchase.md  0002-tokenizable-placement.md  0003-gateway-segregation.md  0003.md  0004-adoption-of-newtypes.md  0004-transaction-initiation-method.md  0005-adoption-of-newtypes.md  0005-decouple-card-validation.md  0005-newtype-pattern.md  0006-data-security.md  0006-security-strategy.md  0007-debug-masking-strategy.md  0007-decouple-bin-validation.md  0008-bank-routing-number-design.md  0009-bank-routing-number-design.md  0009-typed-fields-vs-metadata.md  0010-monolithic-architecture.md  0011-transaction-recovery.md  0012-payment-source-runtime-validation.md  0013-flow-variations-support.md  0014-inputs-types-separation.md
src/: as_unsafe_ref.rs  enums.rs  error.rs  flows.rs  gateway.rs  inputs.rs  internal.rs  lib.rs  traits.rs  types.rs
src/enums/: account_holder_type.rs  account_type.rs  color_depth.rs  eci.rs  merchant_initiated_type.rs  subscription_status.rs  three_ds_version.rs  transaction_status.rs
src/flows/: adjust_payments.rs  cancel_payment.rs  cancel_payments.rs  change_authorization.rs  check_transactions.rs  deferred_payments.rs  external_payments.rs  immediate_payments.rs  one_step_pay_in.rs  one_step_payments.rs  recover_transactions.rs  recurrent_payments.rs  refund_payment.rs  refund_payments.rs  reverse_payment.rs  store_credentials.rs  three_d_secure.rs  tokenize_credentials.rs  tokenize_payment_sources.rs  tokenize_payments.rs  tokenize_source.rs  two_step_pay_in.rs  two_step_payments.rs  verify_authorization.rs  verify_payment.rs
src/gateway/: authorize.rs  secure.rs
src/inputs/: address.rs  bank_account.rs  bank_payment.rs  birth_date.rs  bnpl.rs  browser_info.rs  card_expiry.rs  cash_voucher.rs  credentials.rs  credit_card.rs  crypto_account.rs  crypto_payment.rs  destinations.rs  direct_carrier.rs  distributed_amount.rs  distributed_value.rs  extended_installment_plan.rs  external_payment.rs  external_payment_data.rs  installment_plan.rs  installments.rs  installments_br.rs  installments_gcc.rs  installments_in.rs  installments_jp.rs  instant_account.rs  instant_bank_account.rs  instant_payment.rs  payment.rs  payment_data.rs  payment_source.rs  recipients.rs  recurrent_payment.rs  redistributed_amount.rs  required_action.rs  reversal_reason.rs  secured_payment.rs  (+9 more)
(+168 files in other folders)
