[workspace]
members = [
    "crates/core",
]
resolver = "2"

[workspace.package]
authors = ["Andrew Kozin"]
edition = "2024"
license = "MIT"
repository = "https://github.com/nepalez/merchant-rs"
version = "0.1.0"

[workspace.dependencies]
async-trait = "~0.1.89"
iso_currency = { version = "~0.5.3", default-features = false }
reqwest = "~0.12.23"
rust_decimal = "^1.38"
serde = { version = "^1.0", default-features = false }
serde_json = "^1.0.145"
strum = { version = "~0.27.2", default-features = false }
strum_macros = "~0.27.2"
