[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "crates/core",
]
resolver = "2"

[workspace.package]
authors = ["Andrew Kozin"]
edition = "2024"
license = "MIT"
repository = "https://github.com/nepalez/merchant-rs"
version = "0.1.0"

[workspace.dependencies]
async-trait = { version = "0.1", default-features = false }
codes-iso-3166 = { version = "0.1", default-features = false }
email_address = { version = "0.2", default-features = false }
iban_validate = { version = "5", default-features = false }
iso_currency = { version = "0.5", default-features = false }
luhn3 = { version = "1", default-features = false }
rust_decimal = { version = "1", default-features = false }
strum_macros = {  version = "0.27", default-features = false }
zeroize = { version = "1", default-features = false }
zeroize_derive = { version = "1", default-features = false }
