[package]
name = "merchant-rs-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
iso_currency = { workspace = true, features = ["with-serde"] }
reqwest.workspace = true
rust_decimal = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
