[package]
name = "merchant-rs-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
iso_currency.workspace = true
luhn3.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
secrecy.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
