[package]
name = "merchant-rs-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
codes-iso-3166.workspace = true
email_address.workspace = true
iban_validate.workspace = true
iso_currency.workspace = true
luhn3.workspace = true
rust_decimal.workspace = true
strum_macros.workspace = true
zeroize.workspace = true
zeroize_derive.workspace = true
